fixed "My Experience" header alignment on the index carousel

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -658,6 +658,7 @@ a:hover.no-underline {
 	
 	#aboutMe img {margin-left: 0px; margin-right: 0px;}
 	#aboutMe li {font-size: .9em;}
+	#aboutMe h2 {font-size: 1.8em;}
 
 	#divRss {top: -59px;}	
 	
